feat: refactor event handling and update ConstraintRepository query for event retrieval